--- a/grocery_app/pubspec.yaml
+++ b/grocery_app/pubspec.yaml
@@ -44,7 +44,9 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  # flutter_lints: ^1.0.0
+  # custom_refresh_indicator: ^1.0.0
+  path_provider: ^2.0.8
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
